--- a/front/package.json
+++ b/front/package.json
@@ -11,11 +11,13 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "css-loader": "^0.26.4",
     "element-ui": "^1.3.0-beta.2",
     "exports-loader": "^0.6.4",
     "jquery": "^3.2.1",
     "vue": "^2.3.1",
+    "vue-data-tables": "^1.1.1",
     "vue-router": "^2.3.0",
     "vue-style-loader": "^2.0.5"
   },
@@ -58,6 +60,8 @@
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.3.1",
+    "axios": "^0.16.1",
+    "vue-data-tables": "^1.1.1",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
